--- a/core-plugin/DuinoMC-Core/pom.xml
+++ b/core-plugin/DuinoMC-Core/pom.xml
@@ -76,5 +76,11 @@
             <version>1.7</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.tchristofferson</groupId>
+            <artifactId>ConfigUpdater</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 </project>
