Early quests logic. Helper functions and saving logic.

--- a/core-plugin/DuinoMC-Core/src/main/resources/plugin.yml
+++ b/core-plugin/DuinoMC-Core/src/main/resources/plugin.yml
@@ -26,3 +26,6 @@ commands:
     description: Withdraw DUCO to your wallet
     usage: /withdraw <duino_username> <amount>
     permission: duino.command.economy.withdraw
+  quests:
+    description: aaaaaaaaaa
+    usage: aaaaaaa
